Add: pixela機能実装/erbからhamlに拡張子変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
   <header class="nav nav-wapper">
     <nav>
-      <%= link_to "藤原研 在室情報", '#', id: "logo" %>
+      <%= link_to "藤原研 在室情報", root_path, id: "logo" %>
     </nav>
   </header>
   <div class="container">
