--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,15 +1,8 @@
-- provide(:title, 'Home')
+- provide(:title, "#{@user.name}の詳細変更")
+- if flash[:alert].present?
+  %p= flash[:alert]
 
 = form_for @user do |f|
-  - if user.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(user.errors.count, "error")
-        prohibited this user from being saved:
-      %ul
-        - user.errors.full_messages.each do |msg|
-          %li= msg
-
   .field
     = f.label :image
     = f.file_field :image
