--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,9 +3,8 @@
 
 %p
   %strong 名前:
-  = @user.name
-  - image_url = @user.image.present? ? @user.image.retina.to_s : "no_image.png"
-  = image_tag(image_url, size: '100x100')
+  = name = @user.nickname.present? ? @user.nickname : @user.name
+  = image_tag user_image_exist(@user), size: '100x100'
 
 %p
   %strong 在室状況:
@@ -20,9 +19,10 @@
   = 500 - @total_time
   時間
 
-%p
-  %strong プロフィール設定:
-  = link_to "Edit", edit_user_path(@user)
+- if @current_user == @user
+  %p
+    %strong プロフィール設定:
+    = link_to "Edit", edit_user_path(@user)
 
 %iframe{src: "https://pixe.la/v1/users/#{@user.name}/graphs/access-graph", width:"700", height: "150"}
 
@@ -35,7 +35,8 @@
     %th 入室時間
     %th 退室時間
     %th 在室時間
-    %th 編集
+    - if @current_user == @user
+      %th 編集
   %tbody
     - @user.existences.order_by_enter_at.each do |existence|
       %tr
@@ -43,6 +44,7 @@
         %td= datetime_encorder(existence.enter_time)
         %td= datetime_encorder(existence.exit_time)
         %td= stay_time(existence)
-        %td= link_to "Edit", edit_user_existence_path(@user, existence.id)
+        - if @current_user == @user
+          %td= link_to "Edit", edit_user_existence_path(@user, existence.id)
 
 = link_to 'Back', root_path
