Add: ランキングページの実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <header class="nav nav-wapper">
     <nav>
       <%= link_to "藤原研 在室情報", root_path, id: "logo" %>
+      <%= link_to "ランキング", ranking_path%>
       <%= link_to "ログアウト", logout_path, method: :delete %>
     </nav>
   </header>
