--- a/app/views/users/ranking.html.haml
+++ b/app/views/users/ranking.html.haml
@@ -1,7 +1,6 @@
-- provide(:title, '出席状況')
-%p#notice= notice
+- provide(:title, 'ランキング')
 
-%h1 出席状況 in FujihaLab
+%h1 在室時間ランキング
 %table
   %thead
     %tr
@@ -13,8 +12,9 @@
     - @users.each do |user|
       %tr
         %td
-          = image_tag user_image_exist(user), size: '50x50'
-          = name = user.nickname.present? ? user.nickname : user.name
+          - image_url = user.image.present? ? user.image.retina.to_s : "no_image.png"
+          = image_tag(image_url, size: '50x50')
+          = user.name
         %td= user.status == 1 ? '入室中' : '退室中'
         %td #{user.total_time} 時間
         %td= link_to 'Show', user
