--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,11 +12,11 @@
 
 %p
   %strong 総在室時間:
-  #{@total_time} 時間
+  #{@user.total_time} 時間
 
 %p
   %strong 卒業まで:
-  = 500 - @total_time
+  = 500 - @user.total_time
   時間
 
 - if @current_user == @user
