Fix: バッチ周りの修正/その他リファクタなり不要ファイルの削除

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,4 @@
-- provide(:title, "#{@user.name}の詳細変更")
+- provide(:title, "#{@user.name}のプロフィール設定")
 - if flash[:alert].present?
   %p= flash[:alert]
 
