Change: 画像周りをCloudinary経由させるようにする/その他細々修正

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -10,10 +10,9 @@
     = f.text_field :nickname, value: @user.nickname
 
   .field
-    = f.label :image
-    = f.file_field :image, id: "post_img"
-    = image_tag(user_image_exist(@user), size: '100x100', id: "preview_img")
-
+    = f.label :picture
+    = f.file_field :picture, id: "post_img"
+    = user_image_tag(@user, "preview_img")
   .field
     = f.label :password
     = f.password_field :password
