--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -13,7 +13,7 @@
     - @users.each do |user|
       %tr
         %td
-          = image_tag user_image_exist(user), size: '50x50'
+          = user_image_tag(user, "")
           = name = user.nickname.present? ? user.nickname : user.name
         %td= user.status == 1 ? '入室中' : '退室中'
         %td #{user.total_time} 時間
