--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,7 +4,7 @@
 %p
   %strong 名前:
   = name = @user.nickname.present? ? @user.nickname : @user.name
-  = image_tag user_image_exist(@user), size: '100x100'
+  = user_image_tag(@user, "")
 
 %p
   %strong 在室状況:
