--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <nav>
       <%= link_to "藤原研 在室情報", root_path, id: "logo" %>
       <%= link_to "ランキング", ranking_path%>
+      <%= link_to "メンバーリスト", member_path%>
       <%= link_to "ログアウト", logout_path, method: :delete %>
     </nav>
   </header>
