--- a/app/views/users/member.html.haml
+++ b/app/views/users/member.html.haml
@@ -15,6 +15,6 @@
         %td
           = user_image_tag(user, "")
           = name = user.nickname.present? ? user.nickname : user.name
-        %td= user.status == 1 ? '入室中' : '退室中'
+        %td= user.status? ? '入室中' : '退室中'
         %td #{user.total_time} 時間
         %td= link_to 'Show', user
