Change: ヘッダーに要素追加/view周りのリファクタ及び機能追加,修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,14 @@
   <body>
   <header class="nav nav-wapper">
     <nav>
-      <%= link_to "藤原研 在室情報", root_path, id: "logo" %>
+      <%= link_to "出席状況", root_path %>
       <%= link_to "ランキング", ranking_path%>
       <%= link_to "メンバーリスト", member_path%>
       <%= link_to "ログアウト", logout_path, method: :delete %>
+      <%= link_to user_path(@current_user) do %>
+        <%= user_name(@current_user) %>
+        <%= user_image_tag(@current_user, '', 30, 30) %>
+      <% end %>
     </nav>
   </header>
   <div class="container">
