--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,7 +16,7 @@
 
 %p
   %strong 卒業まで:
-  = 450 - @user.total_time
+  = state = (0 > (450 - @user.total_time)) ? "卒業おめでとう！" : 450 - @user.total_time
   時間
 
 - if @current_user == @user
