--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -6,7 +6,7 @@
       width: 100%;
       height: 60px;
       background-color: $first_color;
-      @include shadow;
+      @include shadow(3px, 1px, 0.3);
       nav{
         display: flex;
         flex-direction: row;
@@ -47,14 +47,14 @@
       left: 0;
       width: 265px;
       height: 100vh;
-      background-color: #222;
+      background-color: rgba(#000,0.8);
       z-index: 200;
       transform: translateX(-265px);
       transition: all 0.3s ease 0s;
       &.open {
         transform: translateX(0);
       }
-      i{
+      #drawer_dalete{
         position: absolute;
         top: 10px;
         right: 10px;
@@ -81,17 +81,25 @@
             color: $primary_white_text;
             font-weight: bold;
             text-decoration: none;
+            i{
+              width: 30px;
+              font-size: 25px;
+              padding-right: 10px;
+            }
             img{
               border-radius: 50%;
-              margin-left: 10px;
               object-fit: cover;
               font-family: 'object-fit: cover;';
+              margin-right: 10px;
+            }
+            span{
+              font-weight: bold;
             }
           }
         }
       }
     }
-    #drawer_overlay{
+    #drawer_overlay, #card_overlay{
       position: fixed;
       top: 0;
       left: 0;
@@ -99,24 +107,24 @@
       height: 100vh;
       background-color: #000;
       opacity: 0.7;
-      z-index: 1;
+      z-index: 2;
+      transition: all 0.3s ease 0s;
       &.open{
-        display: none;
+        opacity: 0;
+        z-index: -1;
       }
     }
-    #container{
-      header{
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 60px;
-        background-color: $first_color;
-        @include shadow;
-        i{
-          color: $primary_white_text;
-          font-size: 30px;
-          margin-left: 15px;
-        }
+    header{
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 60px;
+      background-color: $first_color;
+      @include shadow(3px, 1px, 0.3);
+      i{
+        color: $primary_white_text;
+        font-size: 30px;
+        margin-left: 15px;
       }
     }
   }
