--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -2,24 +2,29 @@ $first_color: #FFC107;
 $second_color: #FFA000;
 $third_color: #26C6DA;
 
-$primary_white_text: rgba(#FFF,1);
-$secondary_white_text: rgba(#FFF,0.87);
-$hint_white_text: rgba(#FFF,0.54);
-$divider_white_text: rgba(#FFF,0.38);
+$primary_white_text: rgba(#FFF,0.87);
+$secondary_white_text: rgba(#FFF,0.54);
+$hint_white_text: rgba(#FFF,0.38);
+$divider_white_text: rgba(#FFF,0.14);
 
-$primary_black_text: rgba(#222,1);
-$secondary_black_text: rgba(#222,0.87);
-$hint_black_text: rgba(#222,0.54);
-$divider_black_text: rgba(#222,0.38);
+$primary_black_text: rgba(#000,0.87);
+$secondary_black_text: rgba(#000,0.54);
+$hint_black_text: rgba(#000,0.38);
+$divider_black_text: rgba(#000,0.14);
 
-@mixin shadow{
-  box-shadow: 0px 4px 3px rgba(0,0,0,0.3);
-  -webkit-box-shadow: 0px 4px 3px rgba(0,0,0,0.3);
-  -moz-box-shadow: 0px 4px 3px rgba(0,0,0,0.3);
+@mixin shadow($blur, $depth, $opacity){
+  box-shadow: 0px 4px $blur $depth rgba(0,0,0,$opacity);
+  -webkit-box-shadow: 0px 4px $blur $depth rgba(0,0,0,$opacity);
+  -moz-box-shadow: 0px 4px $blur $depth rgba(0,0,0,$opacity);
 }
 
 body{
   color: $primary_black_text;
   background-color: #F7F7F7;
   word-wrap: break-word;
+}
+
+a{
+  color: $third_color;
+  text-decoration: none;
 }
