--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,18 +1,17 @@
-- provide(:title, "#{user_name(@user)}のプロフィール設定")
+- provide(:title, "ユーザー登録")
 - if flash[:alert].present?
   %p= flash[:alert]
 
-%h1 #{user_name(@user)}の詳細変更
+%h1 新規会員登録
 
 = form_for @user do |f|
   .field
-    = f.label "ニックネーム"
-    = f.text_field :nickname, value: @user.nickname
+    = f.label "ユーザー"
+    = f.text_field :name
 
   .field
-    = f.label "プロフィール写真"
-    = f.file_field :picture, id: "post_img"
-    = user_image_tag(@user, "preview_img", 80, 80)
+    = f.label "ニックネーム"
+    = f.text_field :nickname
 
   .field
     = f.label "端末アドレス"
@@ -29,4 +28,4 @@
   .actions
     = f.submit
 
-= link_to 'Back', user_path(@user)
+= link_to 'Back', login_path
