--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,31 +1,31 @@
 - provide(:title, "ユーザー登録")
-- if flash[:alert].present?
-  %p= flash[:alert]
 
-%h1 新規会員登録
+#signup_container
+  %h1
+    %span ユーザー登録
+    Sign up
+  = form_for @user do |f|
+    .field
+      = f.label "ユーザー"
+      = f.text_field :name
 
-= form_for @user do |f|
-  .field
-    = f.label "ユーザー"
-    = f.text_field :name
+    .field
+      = f.label "ニックネーム"
+      = f.text_field :nickname
 
-  .field
-    = f.label "ニックネーム"
-    = f.text_field :nickname
+    .field
+      = f.label "端末アドレス"
+      = f.text_field :address
 
-  .field
-    = f.label "端末アドレス"
-    = f.text_field :address
+    .field
+      = f.label "パスワード"
+      = f.password_field :password
 
-  .field
-    = f.label "パスワード"
-    = f.password_field :password
+    .field
+      = f.label "パスワード（確認）"
+      = f.password_field :password_confirmation
 
-  .field
-    = f.label "パスワード（確認）"
-    = f.password_field :password_confirmation
+    .action
+      = f.submit '登録する'
 
-  .actions
-    = f.submit
-
-= link_to 'Back', login_path
+    = link_to 'ログインページに戻る', login_path, class: "back_btn"
