--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,50 +1,50 @@
 - provide(:title, "#{@user.name}の情報")
-%p#notice= notice
 
-%p
-  %strong 名前:
-  = user_name(@user)
-  = user_image_tag(@user, "", 80, 80)
+#user_show_container
+  %h1
+    %span #{@user.name}の情報
+    Infomation of #{@user.name}
 
-%p
-  %strong 在室状況:
-  = @user.status? ? '入室中' : '退室中'
-
-%p
-  %strong 総在室時間:
-  #{@user.total_time} 時間
-
-%p
-  %strong 卒業まで:
-  = state = (0 > (450 - @user.total_time)) ? "卒業おめでとう！" : 450 - @user.total_time
-  時間
-
-- if @current_user == @user
   %p
-    %strong プロフィール設定:
-    = link_to "Edit", edit_user_path(@user)
+    名前:
+    = user_name(@user)
+    = user_image_tag(@user, "", 130, 130)
 
-%iframe{src: "https://pixe.la/v1/users/#{@user.name}/graphs/access-graph", width:"700", height: "150"}
+  %p
+    在室状況:
+    = @user.status? ? '入室中' : '退室中'
 
-%p
-  %strong 過去30日の入室履歴:
-%table
-  %thead
-  %tr
-    %th 入室日
-    %th 入室時間
-    %th 退室時間
-    %th 在室時間
-    - if @current_user == @user
-      %th 編集
-  %tbody
-    - @user.existences.order_by_enter_at.each do |existence|
+  %p
+    総在室時間:
+    #{@user.total_time} 時間
+
+  %p
+    卒業まで:
+    = state = (0 > (450 - @user.total_time)) ? "卒業おめでとう！" : 450 - @user.total_time
+    時間
+
+  - if @current_user == @user
+    %p
+      プロフィール設定:
+      = link_to "Edit", edit_user_path(@user)
+
+  %iframe{src: "https://pixe.la/v1/users/#{@user.name}/graphs/access-graph", width:"700", height: "150"}
+
+  %table
+    %thead
       %tr
-        %td= existence.enter_time.strftime("%Y年%m月%d日")
-        %td= datetime_encorder(existence.enter_time)
-        %td= datetime_encorder(existence.exit_time)
-        %td= stay_time(existence)
-        - if @current_user == @user && existence.enter_time.present? && existence.exit_time.present?
-          %td= link_to "Edit", edit_user_existence_path(@user, existence.id)
-
-= link_to 'Back', root_path
+        %th 入室日
+        %th 入室時間
+        %th 退室時間
+        %th 在室時間
+        - if @current_user == @user
+          %th 編集
+    %tbody
+      - @user.existences.order_by_enter_at.each do |existence|
+        %tr
+          %td= existence.enter_time.strftime("%Y年%m月%d日")
+          %td= datetime_encorder(existence.enter_time)
+          %td= datetime_encorder(existence.exit_time)
+          %td= stay_time(existence)
+          - if @current_user == @user && existence.enter_time.present? && existence.exit_time.present?
+            %td= link_to "Edit", edit_user_existence_path(@user, existence.id)
