--- a/app/assets/stylesheets/users/members.scss
+++ b/app/assets/stylesheets/users/members.scss
@@ -19,6 +19,7 @@
       @include shadow(4px, 10px, 3px, 0.5);
       width: 600px;
       border-radius: 10px;
+      background-color: #FFF;
       padding: 20px 0;
       margin: auto;
       li{
