Change: herokuサーバー変更に伴う諸々変更

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,7 @@
 
 #user_show_container
   %h1
-    %span #{@user.name}の情報
+    %span #{user_name(@user)}の情報
     Infomation of #{@user.name}
 
   %p
