Fix: ユーザー登録時は退室状態に修正

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,7 +3,7 @@
 #user_show_container
   %h1
     %span #{user_name(@user)}の情報
-    Infomation of #{@user.name}
+    Infomation of #{user_name(@user)}
 
   %p
     名前:
