Add&Fix: フロントバリデーション追加/userのupdate,API周りの修正

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,7 +1,8 @@
 @import "settings";
 
 @media all and (min-width: 769px){
-  body{
+  html, body{
+    height: 100%;
     #alert{
       position: fixed;
       display: flex;
@@ -45,6 +46,8 @@
           a{
             img{
               border-radius: 50%;
+              object-fit: cover;
+              font-family: 'object-fit: cover;';
               margin-left: 5px;
             }
           }
