--- a/app/assets/stylesheets/existences/edit.scss
+++ b/app/assets/stylesheets/existences/edit.scss
@@ -22,6 +22,14 @@
       border-radius: 10px;
       padding: 40px 20px;
       margin: 0 auto;
+      .error_notification{
+        width: 350px;
+        color: #FFF;
+        text-align: center;
+        background-color: #F00;
+        padding: 10px 0;
+        margin: auto;
+      }
       .field{
         margin: 20px 40px;
         label{
@@ -42,10 +50,9 @@
           box-shadow: none;
           box-sizing: content-box;
           transition: box-shadow .3s, border .3s;
-          &:-webkit-autofill {
-            -webkit-box-shadow: 0 0 0px 1000px white inset;
-            box-shadow: 0 0 0px 1000px white inset;
-          }
+        }
+        .error{
+          color: #F00;
         }
       }
       .action{
