--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -52,6 +52,7 @@
             width: 100%;
             height: 260px;
             object-fit: cover;
+            font-family: 'object-fit: cover;';
           }
           .user_elements{
             width: 100%;
@@ -75,7 +76,7 @@
             font-size: 20px;
             font-weight: bold;
             text-align: center;
-            margin-top: 10px;
+            margin-top: 15px;
           }
           &_info{
             text-align: center;
@@ -84,7 +85,9 @@
               width: 125px;
               height: 125px;
               border-radius: 50%;
-              margin-top: 10px;
+              object-fit: cover;
+              font-family: 'object-fit: cover;';
+              margin-top: 15px;
             }
             iframe{
               width: 250px;
@@ -94,11 +97,11 @@
               position: absolute;
               bottom: 0;
               width: 100%;
-              height: 170px;
+              height: 150px;
               background-color: $second_color;
               margin: 0 auto;
               &_text{
-                height: 110px;
+                height: 85px;
                 margin: 5px 10px;
                 p{
                   color: #FFF;
@@ -136,6 +139,11 @@
             transform: rotateY(180deg);
           }
         }
+      }
+      .any_user_text{
+        width: 100%;
+        text-align: center;
+        margin: 50px 0;
       }
     }
   }
