--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -2,8 +2,11 @@
 
 @media all and (min-width: 769px){
   #user_show_container{
-    width: 700px;
-    margin: 60px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    margin: 60px 0;
     h1{
       font-size: 45px;
       font-weight: bold;
@@ -15,15 +18,46 @@
         font-weight: bold;
       }
     }
+    .user_elements{
+      @include shadow(4px, 10px, 3px, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 700px;
+      background-color: #FFF;
+      border-radius: 10px;
+      padding: 20px 0;
+      margin: auto;
+      &_text{
+        margin-right: 50px;
+        p{
+          font-size: 18px;
+          border-bottom: 1px dotted $second_color;
+          margin: 10px 0;
+          span{
+            color: $secondary_black_text;
+            margin-right: 10px;
+          }
+        }
+      }
+      img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        object-fit: cover;
+        font-family: 'object-fit: cover;';
+      }
+    }
     iframe{
       @include shadow(4px, 10px, 3px, 0.5);
-      margin: 50px 0;
+      margin: 50px auto;
     }
     table{
-      width: 100%;
+      width: 700px;
       display: table;
       border-collapse: collapse;
       border-spacing: 0;
+      margin: auto;
       tbody, thead{
         box-sizing: inherit;
         tr{
