--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -5,38 +5,38 @@
     %span 出席状況
     In attendance
   %ul
-    - @users.each do |user|
-      .card_container
-        .card_elements
-          %li.side.front
-            = user_image_tag(user, "", 300, 300)
-            .user_elements
-              %p= user_name(user)
-              = link_to "javascript:void(0)", class: "show_card", data: {user: user.id} do
-                Show
-                = icon('fas','arrow-right')
-          .user_card.side.back{data: {user: user.id}}
-            %h2
-              = user_name(user)
-            .user_card_info
-              = user_image_tag(user, "", 150, 150)
-              .user_card_info_elements
-                .user_card_info_elements_text
-                  %p
-                    ステータス :
-                    = user.status? ? '在室中' : '退室中'
-                  %p
-                    総在室時間 :
-                    = user.total_time
-                    時間
-                  %p
-                    卒業まで :
-                    = state = (0 > (450 - user.total_time)) ? "Congratulations on your graduation!" : "#{450 - user.total_time} 時間"
-                  - if @current_user == user
-                    %p
-                      プロフィール設定 :
-                      = link_to "Edit", edit_user_path(user)
-                = link_to user_path(user), class: "show_more" do
-                  もっとみる
+    - if @user.present?
+      - @users.each do |user|
+        .card_container
+          .card_elements
+            %li.side.front
+              = user_image_tag(user, "", 300, 300)
+              .user_elements
+                %p= user_name(user)
+                = link_to "javascript:void(0)", class: "show_card", data: {user: user.id} do
+                  Show
                   = icon('fas','arrow-right')
-              = icon('fas', 'times', class: "card_dalete", data: {user: user.id})
+            .user_card.side.back{data: {user: user.id}}
+              %h2
+                = user_name(user)
+              .user_card_info
+                = user_image_tag(user, "", 150, 150)
+                .user_card_info_elements
+                  .user_card_info_elements_text
+                    %p
+                      総在室時間 :
+                      = user.total_time
+                      時間
+                    %p
+                      卒業まで :
+                      = state = (0 > (450 - user.total_time)) ? "Congratulations on your graduation!" : "#{450 - user.total_time} 時間"
+                    - if @current_user == user
+                      %p
+                        プロフィール設定 :
+                        = link_to "Edit", edit_user_path(user)
+                  = link_to user_path(user), class: "show_more" do
+                    もっとみる
+                    = icon('fas','arrow-right')
+                = icon('fas', 'times', class: "card_dalete", data: {user: user.id})
+    - else
+      %p.any_user_text 現在出席中のユーザーは存在しません。
