Add: User保存失敗時にPixelaUser情報も消す処理実装/その他スタイル修正

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,6 @@
     %div#card_overlay.open
     = render "layouts/flash"
     = render "layouts/header"
-    %main#container
+    %main
       = yield
     = render "layouts/footer"
