--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,8 +1,10 @@
 @import "settings";
 
 @media all and (min-width: 769px){
-  html, body{
-    height: 100%;
+  body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     #alert{
       position: fixed;
       display: flex;
@@ -61,6 +63,7 @@
       width: 100%;
       height: 60px;
       background-color: $first_color;
+      margin-top: auto;
       p{
         color: $primary_white_text;
         font-size: 13px;
