--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -73,6 +73,10 @@
         }
       }
     }
+    .pagination{
+      text-align: center;
+      margin-top: 20px;
+    }
   }
 }
 @media all and (max-width: 768px){
